desysflow/answe-my-dms-tts/v1/TECHNICAL_REPORT.md
# TECHNICAL REPORT

## Executive Summary
Prompt-driven workflow executed for role `Platform Engineer` and produced architecture artifacts for version `v1`.

## Document Control
- Project: `answe-my-dms-tts`
- Version: `v1`
- Role: `Platform Engineer`
- Style: `balanced`
- Cloud target: `aws`

## Sub-agent Topology
- Extractor -> template selector -> architecture generator -> edge-case injector -> primary selector.
- Diagram pipeline -> quality refinement.
- Report generator -> cloud infrastructure mapping.

## Parallel Execution Plan
- Repository context build runs in parallel (inventory, stack, modules, references).
- Document packaging runs in parallel where possible for markdown outputs.

## Internal Reviewer Loop
- Required-section validation and wording normalization pass.
- Mermaid prefix/shape validation pass.

## Context Bloat Fixes
- Representative files capped to `TOP_FILE_LIMIT=60`.
- Outputs versioned per run to keep diffs small and traceable.

## Repository Grounding
- Files scanned for symbols: 10
- Files with extracted symbols: 7
- Representative symbol-bearing files:
  - `src/answer_my_dms_tts/kb_manager.py` (python) | classes=KBError | functions=_base_url, _headers, list_knowledge_bases, create_knowledge_base, get_knowledge_base
  - `src/answer_my_dms_tts/dm_agent.py` (python) | classes=DMReplyAgent | functions=_load_kb_context, generate_dm_reply, generate_dm_reply_sync | methods=DMReplyAgent[__init__, generate_response]
  - `src/answer_my_dms_tts/config.py` (python) | classes=Settings | functions=_none_if_blank, load_settings
  - `src/answer_my_dms_tts/tts.py` (python) | classes=TTSError | functions=_auth_headers, synthesize_speech
  - `src/answer_my_dms_tts/app.py` (python) | functions=render_speech_button, clean_tts_text, render_app
  - `src/answer_my_dms_tts/main.py` (python) | functions=on_start, run
  - `src/answer_my_dms_tts/prompts.py` (python) | functions=build_system_prompt

## Session Management and Memory
- Session and run metadata stored in local SQLite.
- Generated docs stored in versioned filesystem folders.

## Requirements Baseline
- traffic_estimate: 10k DAU
- latency_requirement: <200ms p95
- consistency_requirement: eventual
- budget_constraint: moderate
- region: us-east-1
- scale_growth_projection: 2x in 12 months
- critical_features: ['real-time TTS synthesis', 'knowledge base retrieval', 'DM reply generation', 'secure API endpoints', 'scalable architecture', 'high availability']

## Architecture Signals
- HLD components generated: 19
- LLD API endpoints generated: 9
- Cloud target: `aws`
- Language target: `python`

## Quality and Risks
- Primary quality focus: maintainability, reliability, and observability.
- Delivery risk: requirement ambiguity when prompt details are sparse.
- Operational risk: dependency bottlenecks without capacity validation in runtime environment.

## Prompt Context
```text
Role: Platform Engineer
Project: answe-my-dms-tts
Preferred implementation language: python
Cloud target: aws
Design style: balanced
Reference paths: main.py, pyproject.toml, README.md
Observed codebase structure:
- Files scanned for symbols: 10
- Files with extracted symbols: 7
- Representative symbol-bearing files:
  - `src/answer_my_dms_tts/kb_manager.py` (python) | classes=KBError | functions=_base_url, _headers, list_knowledge_bases, create_knowledge_base, get_knowledge_base
  - `src/answer_my_dms_tts/dm_agent.py` (python) | classes=DMReplyAgent | functions=_load_kb_context, generate_dm_reply, generate_dm_reply_sync | methods=DMReplyAgent[__init__, generate_response]
  - `src/answer_my_dms_tts/config.py` (python) | classes=Settings | functions=_none_if_blank, load_settings
  - `src/answer_my_dms_tts/tts.py` (python) | classes=TTSError | functions=_auth_headers, synthesize_speech
  - `src/answer_my_dms_tts/app.py` (python) | functions=render_speech_button, clean_tts_text, render_app
  - `src/answer_my_dms_tts/main.py` (python) | functions=on_start, run
  - `src/answer_my_dms_tts/prompts.py` (python) | functions=build_system_prompt
Design request: Create a production-grade architecture for the current codebase, including API boundaries, data flow, scaling, availability, and security.
```

## External References
- [AWS Polly Text-To-Speech Service: Configuration, Benefits, Features - GeeksforGeeks](https://www.geeksforgeeks.org/how-to-configure-aws-polly-text-to-speech-service/) - March 24, 2025 -AWS Polly isa cloud-based text-to-speech service that converts written text into realistic speech. By offering a variety of voices in multiple l
- [Text to speech: AWS Polly. Text-to-Speech (TTS) technology… | by Tejas Gupta | Medium](https://medium.com/@2017tejasgupta/text-to-speech-aws-polly-a0533112a7aa) - January 14, 2023 -Text to speech: AWS Polly Text-to-Speech (TTS) technologyconverts written text into spoken language. This process analyzes text to determine a
- [Text to Speech with AWS Polly: My Hands-On Implementation Guide | by Sangeethasaravanan | Medium](https://sangeethasaravanan.medium.com/text-to-speech-with-aws-polly-my-hands-on-implementation-guide-a07de731cc7b) - October 9, 2025 -Before anything else, you need an AWS account and valid credentials — specifically the Access Key and Secret Key.
- [AWS Polly Text to Speech (tts) | liteLLM](https://docs.litellm.ai/docs/providers/aws_polly) - import litellm import os # Option 1: Environment variables (recommended) os.environ["AWS_ACCESS_KEY_ID"] = "your-access-key" os.environ["AWS_SECRET_ACCESS_KEY"]
- [AWS Marketplace: Speech-to-Text, Text-to-Speech, & Voice Agent API (Self-Hosted in AWS)](https://aws.amazon.com/marketplace/pp/prodview-kpdktvzdiey4s) - Finally, we use a Text-to-Speech (TTS) engine, such as ElevenLabs , to convert the response back into audio and play it for the user. The entire process is buil

## Future Improvements
- Add automated architecture quality scoring across reliability, cost, and security dimensions.
- Add benchmark-derived capacity guidance for common traffic tiers.
- Add deeper refine-mode context stitching with prior version deltas.
